--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <script src="./instagram.js"></script>
+    <script src="./bank.js"></script>
+    <script src="./barbe-ken.js"></script>
+    <script src="./bmw.js"></script>
+    <script src="./post.js"></script>
+    <script src="./prince-of-persia.js"></script>
+    <script src="./real-madrid.js"></script>
+    <script src="./reel.js"></script>
+    <script src="./transport.js"></script>
+    <script src="./youtube.js"></script>
 </body>
 </html>
