--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./instagram.js"></script>
-    <script src="./bank.js"></script>
-    <script src="./barbe-ken.js"></script>
-    <script src="./bmw.js"></script>
-    <script src="./post.js"></script>
-    <script src="./prince-of-persia.js"></script>
-    <script src="./real-madrid.js"></script>
-    <script src="./reel.js"></script>
-    <script src="./transport.js"></script>
-    <script src="./youtube.js"></script>
+    <script src="./Airport.js"></script>
+    <script src="./AuthSystem.js"></script>
+    <script src="./BankQueue.js"></script>
+    <script src="./CashRegister.js"></script>
+    <script src="./FraudDetector.js"></script>
+    <script src="./JavaScriptCourse.js"></script>
+    <script src="./MobileOperator.js"></script>
+    <script src="./MobileOperator.js"></script>
+    <script src="./PoliceStation.js"></script>
+    <script src="./Product.js"></script>
+    <script src="./taxi.js"></script>
 </body>
 </html>
