--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./Airport.js"></script>
-    <script src="./AuthSystem.js"></script>
-    <script src="./BankQueue.js"></script>
-    <script src="./CashRegister.js"></script>
-    <script src="./FraudDetector.js"></script>
-    <script src="./JavaScriptCourse.js"></script>
-    <script src="./MobileOperator.js"></script>
-    <script src="./MobileOperator.js"></script>
-    <script src="./PoliceStation.js"></script>
-    <script src="./Product.js"></script>
-    <script src="./taxi.js"></script>
+    <script src="./containsDigit.js"></script>
+    <script src="./containsWord.js"></script>
+    <script src="./hello.js"></script>
+    <script src="./isAlphanumeric.js"></script>
+    <script src="./isNumeric.js"></script>
+    <script src="./isValidMultiLineText.js"></script>
+    <script src="./isValidPostalCode.js"></script>
+    <script src="./isValidTajicPhoneNumber.js"></script>
+    <script src="./startWhithUpperCase.js"></script>
 </body>
 </html>
